--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 
 .dark-bg-color {
     background-color: #1f2937;
+    color: #E5E7EB;
 }
 
 .header {
@@ -26,9 +27,49 @@ ul {
     padding: 0;
     margin: 0;
     list-style: none;
-    font-size: 18px;
-    color: #E5E7EB;
     align-items: center;
     gap: 32px;
     font-weight: 200;
+}
+
+.hero {
+    max-width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    padding: 64px 16px 80px 16px;
+    gap: 32px;
+}
+
+.img {
+    background-color:#4a4a4c;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.left-hero {
+    flex: 1;
+}
+
+.main-text {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #f9faf8;
+    margin-bottom: 16px;
+}
+
+.secondary-text {
+    font-size: 18px;
+    font-weight: 200;
+}
+
+button {
+    background-color: #3882f6;
+    color: #E5E7EB;
+    font-weight: bold;
+    border-width: 0;
+    border-radius: 6px;
+    padding: 6px 20px;
+    margin: 24px 0 0 0;
 }
