--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body {
     margin: 0;
 }
 
+.section {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
 .dark-bg-color {
     background-color: #1f2937;
     color: #E5E7EB;
@@ -11,8 +16,6 @@ body {
 .header {
     display: flex;
     padding: 16px;
-    max-width: 1000px;
-    margin: 0 auto;
 }
 
 .logo {
@@ -33,8 +36,6 @@ ul {
 }
 
 .hero {
-    max-width: 1000px;
-    margin: 0 auto;
     display: flex;
     padding: 64px 16px 80px 16px;
     gap: 32px;
