--- a/style.css
+++ b/style.css
@@ -74,3 +74,39 @@ button {
     padding: 6px 20px;
     margin: 24px 0 0 0;
 }
+
+.info-header-text {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+    text-align: center;
+    padding: 48px 0;
+}
+
+.card-container {
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+    padding-bottom: 48px;
+}
+
+.card {
+    width: 150px;
+    height: 300px;
+}
+
+.card-img {
+    box-sizing: border-box;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #3882f6;
+    border-radius: 6px;
+    width: 150px;
+    height: 150px;
+}
+
+.card-text {
+    text-align: center;
+    color: #4a4a4c;
+    margin: 8px 0;
+}
