--- a/style.css
+++ b/style.css
@@ -18,11 +18,14 @@ body {
     padding: 16px;
 }
 
-.logo {
+.header-text {
     font-size: 24px;
     color: #f9faf8;
-    margin-right: auto;
     font-weight: bold;
+}
+
+.logo {
+    margin-right: auto;
 }
 
 ul {
@@ -63,6 +66,7 @@ ul {
 .secondary-text {
     font-size: 18px;
     font-weight: 200;
+    color: #f9faf8;
 }
 
 button {
