--- a/style.css
+++ b/style.css
@@ -141,3 +141,29 @@ button {
     font-weight: bold;
     padding-right: 24px;
 }
+
+.cta-container {
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cta {
+    background-color: #3882f6;
+    width: 1000px;
+    margin: 0 auto;
+    border-radius: 6px;
+    padding: 48px 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.cta button {
+    border-style: solid;
+    border-width: 2px;
+    border-color: #f9faf8;
+    margin: 12px 0;
+    flex: none;
+}
