--- a/style.css
+++ b/style.css
@@ -68,13 +68,15 @@ a {
 }
 
 .img {
-    flex: 1;
+    flex: 1 0 0;
+    min-width: 500px;
     background-color:#4a4a4c;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 300px;
-    min-width: 400px;
+}
+
+img {
+    width: 100%;
+    height: 100%;
 }
 
 .left-hero {
