--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ button {
     height: 300px;
 }
 
-.card-img {
+.card-img img{
     box-sizing: border-box;
     border-style: solid;
     border-width: 3px;
